--- a/src/components/home.scss
+++ b/src/components/home.scss
@@ -1,11 +1,15 @@
 .homeBackground {
     // background-color: #ccc;
+    position: fixed;
+    overflow: hidden;
+    width: 100%;
     height: 100vh;
     background-image: url("../assets/PH_hero1.png");
     background-size: cover;
     display: flex;
     align-content: center;
     justify-content: center;
+
     
 }
 .homeTitle {
@@ -15,7 +19,4 @@
     align-self: center;
     justify-self: center;
     padding-bottom: 400px;
-}
-body {
-    // overflow: hidden;
 }
