--- a/src/components/menu.scss
+++ b/src/components/menu.scss
@@ -1,7 +1,8 @@
 .menuWrapper{
     width: 60vw;
-    height: 100vh;
+    height: 100%;
     margin: 10px auto;
+    padding: 15px;
     background-color: #A9421A;
     box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
     border-radius: 6px;
